--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
   <li></li>
 </ol>
 <img src="https://avatars3.githubusercontent.com/u/36180524?s=400&u=4c1b7515c56b1eff1ebd6afa8e87bf7f7b2e0793&v=4" alt="">
-<a href="**lewiskiara101@gmail.com**
-"></a>
+
+<a href="www.google.com">Google</a>
+<h3>Check out all of the cool things I am learning</h3>
