--- a/index.html
+++ b/index.html
@@ -5,19 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="theme/style.css">
 </head>
 </h1>
-<h1>Welcome to Kiara Lewis's Website</h1>
-<h2>February 2018</h2>
+<div><h1 class="blueheader" >Welcome to Kiara Lewis's Website</h1>
+<h2 id="february">February 2018</h2>
 <p>*This portfolio will hold all of the cool activities that we tackle in the Feb 2018 Savvy Coders Cohort*
 </p>
-<li>First Item</li>
-<li>Second Item </li>
-<ol>
+<div id="vomit">
+<ul>
+  <li>Kiara Lewis</li>
+  <li>lewiskiara101@gmail.com</li>
+</ul>
+</div>
+
+<ol class="blueheader">
+  <li>list item</li>
   <li></li>
   <li></li>
-  <li></li>
-</ol>
+</ol> </div>
 <img src="https://avatars3.githubusercontent.com/u/36180524?s=400&u=4c1b7515c56b1eff1ebd6afa8e87bf7f7b2e0793&v=4" alt="">
 
 <a href="http://www.alambdaweb.com">Google</a>
